tests/baselines/reference/computedPropertyNames4_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(5,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(6,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(7,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(8,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(9,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(10,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(11,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(12,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(13,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(14,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts(15,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames4_ES5.ts (11 errors) ====
    var s: string;
    var n: number;
    var a: any;
    var v = {
        [s]: 0,
        ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [n]: n,
        ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [s + s]: 1,
        ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [s + n]: 2,
        ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [+s]: s,
        ~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [""]: 0,
        ~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [0]: 0,
        ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [a]: 1,
        ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [<any>true]: 0,
        ~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [`hello bye`]: 0,
        ~~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
        [`hello ${a} bye`]: 0
        ~~~~~~~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }